[gd_scene load_steps=5 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://block.tscn" type="PackedScene" id=2]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.0470588, 0.454902, 0.976471, 1 )
sky_horizon_color = Color( 0.556863, 0.823529, 0.909804, 1 )
sky_curve = 0.25
ground_bottom_color = Color( 0.101961, 0.145098, 0.188235, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
sun_energy = 16.0

[sub_resource type="Environment" id=2]
background_sky = SubResource( 1 )
ssao_blur = 1

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.623013, -0.733525, 0.271654, 0.321394, 0.55667, 0.766044, -0.713134, -0.389948, 0.582563, 0, 0, 0 )
shadow_enabled = true
shadow_color = Color( 0.472656, 0.472656, 0.472656, 1 )
shadow_bias = 0.0
shadow_contact = 0.15

[node name="Block" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 2, -4 )
start_point = NodePath("../Level/Start")

[node name="LevelLoad" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.939757, 0.144294, -0.309895, 0, 0.906547, 0.422106, 0.341841, -0.396678, 0.851934, -8.54277, 3.78781, 5.87497 )
projection = 1
current = true
size = 10.0
near = 0.1

[connection signal="won" from="Block" to="." method="_on_Block_won"]
[connection signal="timeout" from="LevelLoad" to="." method="next_level"]

[editable path="Block"]
